// Modelo Localidad
export default class Localidad {
  constructor(id, provinciaId, localityName) {
    this.id = id;
    this.provinciaId = provinciaId;
    this.localityName = localityName;
  }
}
