// Modelo Provincia
export default class Provincia {
  constructor(id, provinciaName) {
    this.id = id;
    this.provinciaName = provinciaName;
  }
}
