// Modelo TipoContrato
export default class TipoContrato {
  constructor(PK_tipoContratoId, tipoContrato) {
    this.PK_tipoContratoId = PK_tipoContratoId;
    this.tipoContrato = tipoContrato;
  }
}
