classDiagram

direction LR

class Job {

+ Int id  

+ String title

+ String description

+ Int idLocation

+ Int  idContractType

+ Int companyId 

+ String publishedDate

+ Int minSalary

+ Int maxSalary

+ String workMode

+ Int experiencie

+ Int applicants

}

class Company {

+ Int id

+ String name

+ String email [N]

+ String companyDescription

+ String createdAt

+ String imgUrl


}

class TipoContrato{
    + Int PK_tipoContratoId
    + String tipoContrato
}

class Localidad{
    + Int id
    + Int provinciaId
    + String localityName
}

class Provincia{
    
    + Int id
    + String provinciaName
}

Job "*" -- "1" Company
Job "*" -- "1" TipoContrato
Job "*" -- "1" Localidad
Localidad "*" -- "1" Provincia